# LearningOpenGL

./: .gitignore  CMakeLists.txt  main.cpp
headers/: Shader.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Shader.cpp
